fix(plugins/plugin-client-common) a11y - sidecar badge contrast issue fix
move badge color override to carbon gray 90 file

--- a/plugins/plugin-carbon-themes/web/css/carbon-gray90.css
+++ b/plugins/plugin-carbon-themes/web/css/carbon-gray90.css
@@ -126,3 +126,7 @@ body[kui-theme="Carbon Gray90"] .repl {
 body[kui-theme="Carbon Gray90"][kui-theme-style] ::placeholder {
   opacity: 0.875 !important;
 }
+
+body[kui-theme="Carbon Gray90"] sidecar .sidecar-header badge.version {
+  color: var(--color-base06);
+}
